[gd_scene load_steps=25 format=3 uid="uid://b6mu5bmu1pwym"]

[ext_resource type="Script" path="res://MainGameAssets/Main-Hard.gd" id="1_2sngc"]
[ext_resource type="PackedScene" uid="uid://ds81u7nml4x3s" path="res://MainGameAssets/hud.tscn" id="1_p2ero"]
[ext_resource type="Texture2D" uid="uid://dry5l7m6g7ig5" path="res://MainGameAssets/SinglePlayer - God.png" id="2_aa5dl"]
[ext_resource type="Script" path="res://MainGameAssets/hud.gd" id="3_hfngy"]
[ext_resource type="Texture2D" uid="uid://2i46oohe8qcl" path="res://MainGameAssets/flag.png" id="3_kgn01"]
[ext_resource type="Texture2D" uid="uid://c0ce0c7l8qp8i" path="res://MainGameAssets/timerNew.png" id="4_hi647"]
[ext_resource type="Texture2D" uid="uid://chfrps0ofswyj" path="res://MainGameAssets/shieldIcon.png" id="5_3pve4"]
[ext_resource type="Texture2D" uid="uid://dwkb1dd3ymuft" path="res://MainGameAssets/trophy.png" id="5_nwt03"]
[ext_resource type="PackedScene" uid="uid://bo4m3k47sr174" path="res://MainGameAssets/tile_map_hard.tscn" id="6_bhs53"]
[ext_resource type="PackedScene" uid="uid://roob15vboiko" path="res://GameOver.tscn" id="7_c1vk6"]
[ext_resource type="Texture2D" uid="uid://dqwb37jx2yvwj" path="res://MainGameAssets/TilesetMedium.png" id="8_2qtax"]
[ext_resource type="PackedScene" uid="uid://bbtibwayj5fyi" path="res://pause_menu.tscn" id="8_6dmyl"]
[ext_resource type="Texture2D" uid="uid://b8u8te2171hwm" path="res://MainGameAssets/pauseButton.png" id="9_yplb7"]
[ext_resource type="Texture2D" uid="uid://bsvi5lwt8du44" path="res://MainGameAssets/pauseHover.png" id="14_a1bo7"]
[ext_resource type="Texture2D" uid="uid://d73cgn6pxh3n" path="res://MainGameAssets/pausePressed.png" id="15_qd3mo"]
[ext_resource type="AudioStream" uid="uid://di5stchlply5r" path="res://Musics/Sipping in the Soft Breeze - HOYO-MiX.mp3" id="16_il2q6"]
[ext_resource type="AudioStream" uid="uid://bqdoxh5ogbxtk" path="res://Musics/Freeze_Spell.ogg" id="17_g1q0n"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fb5hy"]
texture = ExtResource("2_aa5dl")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_vywv8"]
texture = ExtResource("8_2qtax")
texture_region_size = Vector2i(50, 50)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
1:4/0 = 0
4:4/0 = 0
5:4/0 = 0
7:4/0 = 0
1:5/0 = 0
4:5/0 = 0
5:5/0 = 0
7:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
4:6/0 = 0
5:6/0 = 0
7:6/0 = 0
3:6/0 = 0
3:5/0 = 0
2:5/0 = 0
3:4/0 = 0
2:4/0 = 0
0:4/0 = 0
0:5/0 = 0
6:4/0 = 0
6:5/0 = 0
6:6/0 = 0

[sub_resource type="TileSet" id="TileSet_covnf"]
tile_size = Vector2i(50, 50)
sources/0 = SubResource("TileSetAtlasSource_vywv8")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_k84jh"]
texture = ExtResource("9_yplb7")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ue1ml"]
texture = ExtResource("14_a1bo7")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vcc0r"]
texture = ExtResource("15_qd3mo")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rje8d"]

[node name="Hard" type="Node2D"]
script = ExtResource("1_2sngc")

[node name="HUD" parent="." instance=ExtResource("1_p2ero")]
script = ExtResource("3_hfngy")

[node name="Panel - Hard2" type="Panel" parent="HUD"]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
theme_override_styles/panel = SubResource("StyleBoxTexture_fb5hy")

[node name="Flag3" type="Sprite2D" parent="HUD"]
position = Vector2(361.41, 107)
texture = ExtResource("3_kgn01")

[node name="RemainingMines3" type="Label" parent="HUD"]
layout_mode = 0
offset_left = 399.25
offset_top = 43.0
offset_right = 517.81
offset_bottom = 176.0
theme_override_font_sizes/font_size = 95
text = "40"

[node name="ShieldIconTextureRect" type="TextureRect" parent="HUD"]
layout_mode = 0
offset_left = 651.785
offset_top = 58.0
offset_right = 799.785
offset_bottom = 233.0
scale = Vector2(0.578767, 0.604286)
texture = ExtResource("5_3pve4")

[node name="ShieldStatusTextureRect" type="TextureRect" parent="HUD"]
layout_mode = 0
offset_left = 762.7
offset_top = 51.0
offset_right = 885.7
offset_bottom = 169.0

[node name="Timer3" type="Sprite2D" parent="HUD"]
position = Vector2(1428.95, 108.375)
texture = ExtResource("4_hi647")

[node name="Stopwatch3" type="Label" parent="HUD"]
layout_mode = 0
offset_left = 1492.49
offset_top = 38.82
offset_right = 1715.49
offset_bottom = 171.82
theme_override_font_sizes/font_size = 95
text = "0"

[node name="Trophy3" type="Sprite2D" parent="HUD"]
position = Vector2(1079.64, 114)
texture = ExtResource("5_nwt03")

[node name="Highscore3" type="Label" parent="HUD"]
layout_mode = 0
offset_left = 1124.98
offset_top = 42.0
offset_right = 1286.99
offset_bottom = 175.0
theme_override_font_sizes/font_size = 95
text = "100"

[node name="TileMap" parent="." instance=ExtResource("6_bhs53")]
position = Vector2(159.945, 271.095)
tile_set = SubResource("TileSet_covnf")
layer_0/name = "Backgrounds"
layer_1/name = "Mines"
layer_2/name = "Numbers"
layer_3/name = "Powerups"
layer_4/name = "Grass"
layer_5/name = "Flags"
layer_5/enabled = true
layer_5/modulate = Color(1, 1, 1, 1)
layer_5/y_sort_enabled = false
layer_5/y_sort_origin = 0
layer_5/z_index = 0
layer_5/tile_data = PackedInt32Array()
layer_6/name = "Hovers"
layer_6/enabled = true
layer_6/modulate = Color(1, 1, 1, 1)
layer_6/y_sort_enabled = false
layer_6/y_sort_origin = 0
layer_6/z_index = 0
layer_6/tile_data = PackedInt32Array()
layer_7/name = "Exclamation"
layer_7/enabled = true
layer_7/modulate = Color(1, 1, 1, 1)
layer_7/y_sort_enabled = false
layer_7/y_sort_origin = 0
layer_7/z_index = 0
layer_7/tile_data = PackedInt32Array()

[node name="GameOver" parent="." instance=ExtResource("7_c1vk6")]
process_mode = 2

[node name="PauseMenu" parent="." instance=ExtResource("8_6dmyl")]

[node name="PauseButton" type="Button" parent="."]
offset_left = 29.0
offset_top = 39.0
offset_right = 177.0
offset_bottom = 164.0
theme_override_styles/normal = SubResource("StyleBoxTexture_k84jh")
theme_override_styles/hover = SubResource("StyleBoxTexture_ue1ml")
theme_override_styles/pressed = SubResource("StyleBoxTexture_vcc0r")
theme_override_styles/focus = SubResource("StyleBoxEmpty_rje8d")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("16_il2q6")
autoplay = true

[node name="FreezeEffect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("17_g1q0n")
autoplay = true

[connection signal="restart" from="GameOver" to="." method="_on_game_over_restart"]
[connection signal="pressed" from="PauseButton" to="." method="_on_pause_button_pressed"]
